--- a/styles.css
+++ b/styles.css
@@ -13,10 +13,13 @@ h1{
     height: 100%;
     margin: auto;
     margin-top: 50px;
-    padding: 10px;
+    padding: 8px;
     background-color: rgb(80, 69, 69);
-    border-radius: 20px;
-    box-shadow: inset 2px 2px 5px black;
+    box-shadow: inset 2px 2px 2px black;
+}
+.display{
+    background-color: rgb(18, 17, 17);
+    border-radius: 5px;
 }
 .display input{
     width: 260px;
